--- a/planning/Vorgehensweise/structure.tex
+++ b/planning/Vorgehensweise/structure.tex
@@ -29,7 +29,7 @@ pdfspacing, % Makes use of pdftex’ letter spacing capabilities via the microty
 dottedtoc % Dotted lines leading to the page numbers in the table of contents
 ]{classicthesis} % The layout is based on the Classic Thesis style
 
-\usepackage{arsclassica} % Modifies the Classic Thesis package
+%\usepackage{arsclassica} % Modifies the Classic Thesis package
 
 \usepackage[T1]{fontenc} % Use 8-bit encoding that has 256 glyphs
 
